--- a/app/views/matches/_form.html.erb
+++ b/app/views/matches/_form.html.erb
@@ -33,7 +33,7 @@
 
     <div class="space-y-2">
       <%= form.label :match_date, class: "block text-sm font-medium text-gray-700" %>
-      <%= form.datetime_field :match_date,
+      <%= form.date_field :match_date,
                               class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-500 focus:ring-opacity-50" %>
     </div>
 
