--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -1,9 +1,5 @@
-<% content_for :title, "New team" %>
+<% content_for :title, "Nouvelle équipe" %>
 
-<div class="md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl">New team</h1>
-
+<div class="w-full flex justify-center">
   <%= render "form", team: @team %>
-
-  <%= link_to "Back to teams", teams_path, class: "w-full sm:w-auto text-center mt-2 sm:mt-0 sm:ml-2 rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
 </div>
