--- a/app/views/matches/new.html.erb
+++ b/app/views/matches/new.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, "Nouveau match" %>
 
-<div class="max-w-3xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
+<div class="max-w-3xl mx-auto px-4 sm:px-6 lg:px-8 py-8 mb-16">
   <div class="bg-white shadow-md rounded-lg overflow-hidden">
     <div class="px-6 py-4 border-b border-gray-200">
       <h1 class="text-2xl font-bold text-gray-800">Nouveau Match</h1>
