--- a/app/views/players/edit.html.erb
+++ b/app/views/players/edit.html.erb
@@ -1,5 +1,5 @@
 <% content_for :title, "Modifier un joueur" %>
 
-<div class="w-full flex justify-center">
+<div class="w-full flex justify-center mb-16">
   <%= render "form", player: @player %>
 </div>
