--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -41,20 +41,7 @@
           <li><%= link_to "Accueil", root_path, class: "text-gray-400 hover:text-white transition-colors duration-200" %></li>
           <li><%= link_to "Tous les matchs", matches_path, class: "text-gray-400 hover:text-white transition-colors duration-200" %></li>
           <li><%= link_to "Équipes", teams_path, class: "text-gray-400 hover:text-white transition-colors duration-200" %></li>
-          <li><a href="#" class="text-gray-400 hover:text-white transition-colors duration-200">Calendrier</a></li>
-          <li><a href="#" class="text-gray-400 hover:text-white transition-colors duration-200">Classement</a></li>
-        </ul>
-      </div>
-
-      <!-- Ressources -->
-      <div>
-        <h3 class="text-white text-sm font-semibold uppercase tracking-wider mb-4">À propos</h3>
-        <ul class="space-y-2">
-          <li><a href="#" class="text-gray-400 hover:text-white transition-colors duration-200">À propos de nous</a></li>
-          <li><a href="#" class="text-gray-400 hover:text-white transition-colors duration-200">Contact</a></li>
-          <li><a href="#" class="text-gray-400 hover:text-white transition-colors duration-200">FAQ</a></li>
-          <li><a href="#" class="text-gray-400 hover:text-white transition-colors duration-200">Confidentialité</a></li>
-          <li><a href="#" class="text-gray-400 hover:text-white transition-colors duration-200">Conditions d'utilisation</a></li>
+          <li><%= link_to "Joueurs", players_path, class: "text-gray-400 hover:text-white transition-colors duration-200" %></li>
         </ul>
       </div>
     </div>
