--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -1,5 +1,5 @@
 <% content_for :title, "Modifier une équipe" %>
 
-<div class="w-full flex justify-center">
+<div class="w-full flex justify-center mb-16">
   <%= render "form", team: @team %>
 </div>
