--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, "Editing user" %>
 
-<div class="w-full">
+<div class="w-full mb-16">
   <%= render "form", user: @user %>
 </div>
 
