--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, "Création de compte" %>
 
-<div class="w-full flex justify-center">
+<div class="w-full flex justify-center mb-16">
   <%= render "form", user: @user %>
 </div>
 
