--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, "Profil utilisateur" %>
 
-<div class="max-w-4xl mx-auto py-8 px-4 sm:px-6 lg:px-8">
+<div class="max-w-4xl mx-auto py-8 px-4 sm:px-6 lg:px-8 mb-16">
   <% if notice.present? %>
     <div class="mb-6 rounded-md bg-green-50 p-4 animate-fade-in-down">
       <div class="flex">
