--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -89,7 +89,7 @@
           </div>
 
           <div class="mt-4 text-right">
-            <%= link_to "See all teams", teams_path, class: "text-blue-600 hover:text-blue-800" %>
+            <%= link_to "Voir toutes les équipes", teams_path, class: "text-blue-600 hover:text-blue-800" %>
           </div>
         <% else %>
           <p class="text-gray-600">Pas encore d'équipe.</p>
