--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, "Liste des matchs" %>
 
-<div class="w-full max-w-4xl mx-auto mt-10 space-y-6">
+<div class="w-full max-w-4xl mx-auto mt-10 space-y-6 mb-16">
   <% if notice.present? %>
     <p class="py-2 px-3 bg-green-50 text-green-600 font-medium rounded-md inline-block">
       <%= notice %>
