--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -8,7 +8,7 @@
   "Support" => "bg-yellow-100 text-yellow-800"
 } %>
 
-<div class="max-w-3xl mx-auto px-4 sm:px-6 lg:px-8 py-8 space-y-8">
+<div class="max-w-3xl mx-auto px-4 sm:px-6 lg:px-8 py-8 space-y-8" mb-16>
 
   <% if notice.present? %>
     <div class="rounded-md bg-green-50 p-4">
