--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -8,7 +8,7 @@
   "Support" => "bg-yellow-100 text-yellow-800"
 } %>
 
-<div class="max-w-3xl mx-auto mt-10 space-y-8">
+<div class="max-w-3xl mx-auto mt-10 space-y-8 mb-16">
 
   <% if notice.present? %>
     <p class="py-2 px-3 bg-green-50 text-green-600 font-medium rounded-md">
